# losowe_notebooki

./: main.py  pyproject.toml
src/: logger_format.ipynb  ollama.ipynb  vizualization_librarys.ipynb
