[project]
name = "losowe-notebooki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "geoplot>=0.5.1",
    "ipython>=9.13.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "matplotlib-inline>=0.2.1",
    "notebook>=7.5.6",
    "pandas>=3.0.2",
    "plotnine>=0.15.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "yellowbrick>=1.5",
]
